--- a/backend/composer.json
+++ b/backend/composer.json
@@ -19,7 +19,18 @@
         "sensio/distribution-bundle": "~2.3",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        
+        /*
+         * Added Bundles
+         */
+        "sylius/resource-bundle": "0.14.*@dev",
+        "sylius/resource": "0.14.*@dev",
+        "sylius/storage": "0.14.*@dev",
+        "friendsofsymfony/rest-bundle": "1.5.*@dev",
+        "nelmio/cors-bundle": "^1.4",
+        "friendsofsymfony/oauth-server-bundle": "dev-master",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "scripts": {
         "post-install-cmd": [
