--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -69,6 +69,11 @@ swiftmailer:
     spool:     { type: memory }
     
 sylius_resource:
+    settings:
+            default_page_size: 10
+            allowed_paginate:  [5, 10, 25, 50]
+            sortable:          true
+            filterable:        true
     resources:
         app.post:
             driver:    doctrine/orm
@@ -82,3 +87,30 @@ sylius_resource:
             driver:    doctrine/orm
             classes:
                 model: AppBundle\Entity\Tag
+fos_rest:
+    disable_csrf_role: ROLE_USER
+    view:
+        formats:
+            json: true
+            xml:  false
+    routing_loader:
+        default_format: json
+    format_listener:
+        rules:
+            - { path: '^/api', priorities: ['json'], fallback_format: json, prefer_extension: true }
+
+nelmio_cors:
+    defaults:
+        allow_credentials: true
+        allow_origin: []
+        allow_headers: []
+        allow_methods: []
+        expose_headers: []
+        max_age: 0
+        hosts: []
+    paths:
+        '^/api':
+            allow_origin: ['*']
+            allow_headers: ['*']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
