--- a/backend/app/config/routing.yml
+++ b/backend/app/config/routing.yml
@@ -16,3 +16,12 @@ app_tag:
     resource: app.tag
     type:     sylius.api
     prefix:   /api
+    
+app_api_post_comments:
+    path: /api/posts/{id}/comments/
+    defaults:
+        _controller: app.controller.comment:indexAction
+        _sylius:
+            filterable: true
+            criteria:
+                post: $id
